# zed-windows-builds

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml  nightly.yml  stable.yml
data/: config.toml
src/: main.rs
